# rfrakt

./: CMakeLists.txt  README.md  flake.nix  genanim.py  qrfrakt.cpp  rfrakt.cpp
